--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <header>
-    <img src="header-logo.png" alt="Trello Logo">
+    <img src="https://images.g2crowd.com/uploads/product/image/large_detail/large_detail_b748e1a9feac220d506734f2a6a69a51/trello.png" alt="Trello Logo">
     <!-- Navigation and other header content -->
   </header>
 
   <section class="hero">
-    <img src="hero-image.png" alt="Hero Image">
+    <img src="https://images.ctfassets.net/rz1oowkt5gyp/3nQegkolziRIjy8Nven4pK/ae8076f717ec07e70059636a42de5b1c/Features-Graphic-Cards.png?w=1140&fm=webp" alt="Hero Image">
     <!-- Hero section content -->
   </section>
 
   <section class="features">
-    <img src="feature-image-1.png" alt="Feature 1">
-    <img src="feature-image-2.png" alt="Feature 2">
-    <img src="feature-image-3.png" alt="Feature 3">
+    <img src="https://images.ctfassets.net/rz1oowkt5gyp/4kCNudjaBYj90CGgG7Lict/cbafa67336b2007278f50d99ceabfb22/Boards_2x.png?w=1140&fm=webp" alt="Feature 1">
+    <img src="https://images.ctfassets.net/rz1oowkt5gyp/6qNFanQxzRQEUQGMwc72KG/e0d4a143dfd448cfc14e89813924f3da/PremiumLP_HeroImage_2x.png?w=1140&fm=webp" alt="Feature 2">
+    <img src="https://images.ctfassets.net/rz1oowkt5gyp/5Vcv2W4DlIc88JiQqh3Uv5/d9ccb3bbf806ce8ec0aab3115b42cd07/03D_Power-ups_2x.png?w=1140&fm=webp" alt="Feature 3">
     <!-- Features section content -->
   </section>
 
